--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.0",
     "pdfkit": "^0.17.2",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
