--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,36 @@
-# Créer le fichier .gitignore
-cat > .gitignore << 'EOF'
-node_modules/
+# Fichiers de base de données SQLite
+*.sqlite
+database.sqlite
+/data/
+!/data/.keep  # Si vous voulez garder un fichier vide pour Git
+
+# Fichiers d'environnement
 .env
 .env.local
+.env.development.local
+.env.test.local
 .env.production.local
+
+# Dependencies
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-database.sqlite
-*.sqlite
-*.sqlite-journal
+
+# Éditeurs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Système
 .DS_Store
 Thumbs.db
-.idea/
-.vscode/
-EOF
+
+# Logs
+logs/
+*.log
+
+# Backup files
+*.bak
+*.backup
