--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "mega-data-server",
   "version": "1.0.0",
+  "description": "API Mega-data - Gestion des membres d'église",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node start.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
+  "keywords": [
+    "mega-data",
+    "église",
+    "gestion",
+    "membres",
+    "api",
+    "nodejs"
+  ],
+  "author": "Mega-data Église",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.15.0",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.0",
     "pdfkit": "^0.17.2",
