--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "scripts": {
     "start": "node start.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "18.x"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
-    "json2csv": "5.0.7",
     "jsonwebtoken": "9.0.0",
-    "pdfkit": "0.17.2",
-    "sqlite3": "5.1.6"
+    "pdfkit": "0.13.0",
+    "sqlite3": "5.1.6",
+    "body-parser": "1.20.2"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
